--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   ],
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon-16.png",
     "default_popup": "popup.html"
   },
 
