--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "permissions": [
     "<all_urls>",
     "tabs",
-    "notifications"
+    "notifications",
+    "activeTab"
     ],
 
   "web_accessible_resources": [
@@ -15,7 +16,7 @@
   ],
 
   "browser_action": { 
-    "default_icon": "icon-16.png",
+    "default_icon": "Media/icon-16.png",
     "default_popup": "popup.html"
   },
 
@@ -24,13 +25,14 @@
   },
 
   "background": {
-    "scripts": ["extension.js", "db.js"]
+    "scripts": ["extension.js", "db.js","visual.js"],
+    "persistent": true
   },
 
   "icons": {
-    "16": "green-icon.png", 
-    "48": "green-icon.png",
-    "128": "green-icon.png"
+    "16": "Media/green-icon.png", 
+    "48": "Media/green-icon.png",
+    "128": "Media/green-icon.png"
   },
 
   "commands": {
