--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
   },
 
   "background": {
-    "scripts": ["extension.js", "db.js","visual.js"],
+    "scripts": ["extension.js", "db.js", "taskdb.js", "visual.js"],
     "persistent": true
   },
 
@@ -45,15 +45,15 @@
     },
     "add-importance-2": {
       "suggested_key": {
-        "default": "Ctrl+J",
-        "mac": "Command+J"
+        "default": "Ctrl+K",
+        "mac": "Command+K"
       },
       "description": "2."
     },
     "add-importance-3": {
       "suggested_key": {
-        "default": "Ctrl+K",
-        "mac": "Command+K"
+        "default": "Ctrl+J",
+        "mac": "Command+J"
       },
       "description": "3."
     },
