--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,7 @@
     "_execute_browser_action": {
       "suggested_key": {
         "default": "Ctrl+B",
-        "mac": "Command+B"
+        "mac": "Command+Period"
       }
     }
   }
